refactor: simplify api call. no property for bungeesurfspots and for riversurfspots. just one for both. The enum type is on the spot to differentiate between the different kinds.